# hepu

./: .gitignore  pyproject.toml
configs/: config.yaml
src/extract_epu/: extract_epu.py
src/structure/: paper.py
workflow/: Snakefile  extract_word_count.py
